# feasibility

./: .gitignore  CMakeLists.txt  README.md  install.sh  mainpage.dox  manifest.xml
CMakeModules/: FindPQP.cmake
data/: AluminumChair.dae  blue_column.mtl  gray_estrade.mtl  hrp2.urdf
fullBodyApprox/: fullbody_0_-31_0.tris  fullbody_0_-31_29.tris  fullbody_20_-31_0.tris  fullbody_25_-21_-29.tris  fullbody_25_-21_0.tris  fullbody_25_-26_0.tris  fullbody_30_-16_0.tris  fullbody_30_-21_29.tris  fullbody_35_-16_29.tris
model/: HRP2JRLmainSmallOld.wrl  HRP2LinkJointRankSmallOld.xml  HRP2SpecificitiesSmallOld.xml
model/fullBodyApprox/: fullbody_-19_-31_-14.tris  fullbody_-19_-31_-29.tris  fullbody_-19_-31_0.tris  fullbody_-19_-31_14.tris  fullbody_0_-16_0.tris  fullbody_0_-21_-29.tris  fullbody_0_-21_0.tris  fullbody_0_-21_29.tris  fullbody_0_-31_-29.tris  fullbody_0_-36_0.tris  fullbody_15_-21_-14.tris  fullbody_15_-21_0.tris  fullbody_15_-21_14.tris  fullbody_20_-16_-14.tris  fullbody_20_-16_0.tris  fullbody_20_-16_14.tris  fullbody_20_-16_29.tris  fullbody_20_-21_-29.tris  fullbody_20_-21_0.tris  fullbody_20_-21_29.tris  fullbody_20_-26_-14.tris  fullbody_20_-26_-29.tris  fullbody_20_-26_0.tris  fullbody_20_-26_14.tris  fullbody_20_-26_29.tris  fullbody_20_-31_29.tris  fullbody_25_-11_-14.tris  fullbody_25_-11_14.tris  fullbody_25_-21_29.tris  fullbody_25_-26_14.tris  fullbody_25_-26_29.tris  fullbody_30_-16_29.tris
model/tris/: TRIS_body.tris  TRIS_chest1.tris  TRIS_head0.tris  TRIS_head1.tris  TRIS_larm0.tris  TRIS_larm1.tris  TRIS_larm2.tris  TRIS_larm3.tris  TRIS_larm4.tris  TRIS_larm5.tris  TRIS_lleg0.tris  TRIS_lleg1.tris  TRIS_lleg3.tris  TRIS_lleg5.tris  TRIS_rarm0.tris  TRIS_rarm1.tris  TRIS_rarm2.tris  TRIS_rarm3.tris  TRIS_rarm4.tris  TRIS_rarm5.tris  TRIS_rleg0.tris  TRIS_rleg1.tris  TRIS_rleg2.tris  TRIS_rleg4.tris  TRIS_rleg5.tris  lleg2.100.tris  lleg2.110.tris  lleg2.120.tris  lleg2.150.tris  lleg3.110.tris  lleg3.120.tris  lleg3.150.tris  lleg4.100.tris  lleg4.110.tris  lleg4.120.tris  lleg4.150.tris  lleg5.110.tris  lleg5.120.tris  lleg5.150.tris  rleg2.110.tris  (+12 more)
scripts/: classification_from_mcmc.m  constrain.m  convert_points_to_train_data.m  create_tris_cylinder.m  debug_zmp_com.gs  decision_boundary.m  humanoids_data.sh  isosurface_decision_boundary.m  mcmc_plot_distance_histogram.m  objective.m  plot.py  plotInsideOutsideFunction.m  plot_approximation_from_data.m  plot_approximation_from_file.m  plot_astar_time.m  plot_cone_from_data.m  plot_convexhull_from_data.m  plot_convexhull_from_file.m  plot_data_from_file.m  plot_data_from_matrix.m  plot_debug.sh  plot_decision_boundary.m  plot_halfsphere_from_data.m  plot_isosurface_from_polynomial.m  plot_points_from_data.m  plot_points_from_file.m  plot_sphere_from_data.m  plot_surface_from_data.m  simulate_mocap_topic.sh  to_cylindrical.m  to_spherical.m
src/: basic_shape.cpp  contact_transition.cpp  contact_transition.h  environment.cpp  environment.h  environment_13humanoids.cpp  environment_13humanoids_real.cpp  environment_sallebauzil.cpp  environment_testbed.cpp  genFullBodyTrajectory.cpp  genFullBodyTrajectory.h  helperFunctions.h  main.cpp  mcmc_main.cpp  mocap_main.cpp  motionplanner.h  motionplannerhyperplanar.h  motionplannerperrin.h  node_wrapper.cpp  planner.h  ros_util.cpp  ros_util.h  rviz_triangleobject.cpp  rviz_visualmarker.cpp  sampler.cpp  sampler.h  sampler_abstract_problem.h  test_listener.cpp  triangle_visualization.cpp  unit_testing_distance_checker.cpp  unit_testing_exec_replanning.cpp  unit_testing_mcmc_sampling.cpp  unit_testing_triangle_visualization.cpp  util.cpp  util.h  util_eigen.h  util_template.cpp  util_timer.cpp  util_timer.h  vis_steps.cpp
src/deprecated/: motionplanner_perrin.cpp  motionplanner_perrin.h
src/environment/: 13humanoids.cpp  13humanoids_real.cpp  environment.cpp  environment.h  environment_13humanoids.cpp  environment_sallebauzil.cpp  sallebauzil.cpp  testbed.cpp
src/planner/: constraints_checker.cpp  constraints_checker.h  constraints_checker_ann.cpp  constraints_checker_ann.h  constraints_checker_hyperplanar.h  constraints_checker_naive.cpp  constraints_checker_naive.h  constraints_checker_swept_volumer.cpp  constraints_checker_swept_volumer.h  constraints_checker_wallconstraints_decorator.cpp  constraints_checker_wallconstraints_decorator.h  contact_transition.cpp  contact_transition.h  fast_replanning_util.h  motion_generator.cpp  motion_generator.h  motionplanner.h  motionplanner_astar.h  motionplanner_perrin.cpp  motionplanner_perrin.h  motionplannerneural.h  motionplannerperrin.h  robot_path.cpp.in  trajectory_footstep.cpp  trajectory_footstep.hh  trajectory_visualizer.cpp  trajectory_visualizer.h
src/rviz/: color.cpp  color.hh  cylindermarkertriangles.cpp  definitions.hh  geometry.cpp  geometry.h  primitive_marker.cpp  primitive_marker.h  primitive_marker_box.cpp  primitive_marker_cylinder.cpp  rviz_geometry.cpp  rviz_interface.cpp  rviz_interface.h  rviz_visualmarker.cpp  rviz_visualmarker.h  rviz_visualmarker_collada.cpp  rviz_visualmarker_common.cpp  rviz_visualmarker_footmarker.cpp  rviz_visualmarker_interface.cpp  rviz_visualmarker_mesh.cpp  rviz_visualmarker_triangleobject.cpp  rviz_visualmarker_tristriangleobject.cpp  visualmarker.cpp  visualmarker.h  visualmarker_collada.cpp  visualmarker_common.cpp  visualmarker_decorator.cpp  visualmarker_footmarker.cpp  visualmarker_interface.cpp  visualmarker_mesh.cpp  visualmarker_triangleobject.cpp  visualmarker_tristriangleobject.cpp
src/sampler/: sampler.cpp  sampler.h  sampler_abstract_problem.h  sampler_algorithms.cpp  sampler_algorithms_uniform.cpp  sampler_cylinder.cpp  sampler_problem_abstract.h  sampler_proposal.cpp  (+3 more)
test/: 13humanoids_planner.cpp  13humanoids_planner_experiment.cpp  13humanoids_planner_experiment_nosweptvolume.cpp  13humanoids_sampler.cpp  contact_pdf_creator.cpp  env_main.cpp  mcmc_main.cpp  mocap_main.cpp  orthey_fastplanner.cpp  orthey_fastplanner_draw_sv.cpp  perrin_fastplanner.cpp  perrin_fastplanner_playback.cpp  unit_testing_exec_replanning.cpp  vis_steps.cpp
(+6 files in other folders)
